prevent wrapping text in small screens

--- a/src/components/media/Aside/Item/Item.module.scss
+++ b/src/components/media/Aside/Item/Item.module.scss
@@ -5,7 +5,7 @@
     font-size: var(--text-size-300);
   }
 
-  & > *:last-child {
+  & > * {
     @include mq(below, md) {
       white-space: nowrap;
     }
